styles.css
/* ... */
.right-banner img { 
    margin-top: 9rem;
    margin-bottom: -0.25rem;
}

.why{
    display: flex;
    width: 75%;
    text-align: center;
    margin: auto;
    place-content: center;
}

.why-header p {
    font-size: 1.5rem;
    color: grey;
    margin-bottom: 2.5rem;
    padding-left: 7rem;
    padding-right: 7rem;
}

.bull-list {
    margin-top: 2.5rem;
    margin-bottom: 5rem;
    display: flex;
    justify-content: center;
    place-self: center;
}

.bull-box{
    display: flex;
    flex-direction: column;
}

.bull-box h3 {
    color:#3d4044;
    text-align: center;
    font-weight: 400;
}

.bull-line{
    display: flex;
    align-items: center;
}

.line{
    background-color: #d1dde8;
    height: 0.23rem;
    width: 8rem;   
}

.white{
    color: white;
    background-color: white;
}

.bull-circle{
    position: relative;
    background-color: rgba(236, 242, 255, 1);
    height: 3.5rem;
    border-radius: 2.563rem;
    min-width: 4rem;
    color: #2476FF;
    text-align: center;
    font-size: 2rem;
    padding-top: 0.75rem;
    margin-left: 0.15rem;
    margin-right: 0.15rem;
}

.play-banner {
    text-align: center;
    margin-bottom: 5rem;
}

.play-banner div img {
    width: 80rem;
    height: 30rem;
    margin: 0 2rem;
}

.play-vid a i {
    position: relative;
    top: -17rem;
    box-shadow: 0px 0.1875rem 0.8125rem 0px rgba(0, 0, 0, 0.25);
    border: 0.0625rem transparent;
    background-color: #ffffff;
    padding: 2rem;
    border-radius: 50%;
    font-size: 1.5rem;
    color: black;
}

.hubspot{
    display: flex;
    padding-left: 2rem;
    padding-bottom: 5rem;
}

.person{
    flex: 1;
    display: grid;
    grid-template-columns:repeat(14, 1fr);
    grid-template-rows: repeat(5, 1fr); 
}

.person img:nth-child(1){
    grid-column: 6 / 10;
    grid-row: 1 / 5;
    height: 28rem;
    width: 20rem;
   
}

.person img:nth-child(2){
   grid-column: 7;
   grid-row: 1 / 4 ;
   height: 24rem;
  
}

.person-quote {
    flex: 1;
    padding-right: 1.8rem;}

.hub-icon{
    margin-bottom: 2rem;
    width: 10rem;
    padding-top: 4.5rem;
}

.hub-quote {
    font-size: 1.9rem;
    line-height: 2.5rem;
    margin-bottom: 3rem;
    max-width: 32rem;
}

.signiture {
    font-size:1.5rem;
    font-weight:600;
}

.signiture p {font-size: 1rem;
font-weight: 600;
color: #666;
margin: 0;
}

.brand-bar{
    display: grid;
    justify-items: center;
}

.brand-bar h3{
    text-align: center;
    color: #5F6368;
    font-size: 1.5rem;
    margin-bottom: 3rem;  
}

.brands{
    display: flex;
    height: 3rem;
    gap: 8.25rem;
    padding: 0 2.5rem; 
    margin-bottom: 5.25rem;
} 


.pricing{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 7.5rem;
    gap: 3.5rem;
}

.price-title h1 {
    font-weight: 700;
    font-size: 2.5rem;
    text-align: center;  
}

.price-title p {
    text-align: center;
    font-size: 1.63rem;
    color: #677788;
}

.plan-table{
    gap: 1.86rem;
    display: flex;
}
.plan-price{font-size: 4rem;}


.price-period{display: flex;}

.plan-period{
    align-self: flex-end;
    color: grey;
}

.plan{
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    border: 0.0625rem transparent;
    box-shadow: 0px 1.25rem 1.25rem 0px rgba(0, 0, 0, 0.15);
    padding: 0 2.5rem;
    width: 27rem;
}

.plan .left-btns {
    flex-direction: column;
    gap: 0;
    color: grey;
}

.planprice{
    display: flex;
    align-items: center;
    font-size: 3.125rem;
    place-items: end;
}

.planprice p{margin-bottom: 0;}

.plan-p{
    font-size: 1.5rem;
    color: #5F6368;
    line-height: 2rem;
}

.plan-features{
    width: 61%;
    flex: 1;
}

.bottom-plan-row, .top-plan-row { 
    display: flex;
    max-width: 52.9rem;
    gap: 1.25rem;
    align-items: flex-start;
    font-size: 1.5rem;
}

.top-plan-left, .top-plan-right, .bottom-plan-left, .bottom-plan-right{
    width: 15rem;
    padding: 1.2rem;
    min-width: 21rem;
}

.top-plan-left p, .top-plan-right p, .bottom-plan-left p, .bottom-plan-right p{
    font-size: 1.25rem;
    color: #677788;
    line-height: 1.75rem;
    
}

.hire{
    display: flex;
    background-color:#20335B; 
    justify-content: center;
    gap: 3.5rem;
}

.left-hire{
    display: flex;
    flex-direction: column;
    gap: 3.5rem;
    color: #f7f7f7;
    padding-left: 2rem;
    line-height: 1.75rem;
    padding-top: 11rem;
}
.left-top-hire h2{font-size: 1.75rem;}
.left-hire-quote{
    font-style: italic;
    line-height: 1.5rem;
    width: 22rem;
}

.left-top-hire p {
    font-size: 1rem;
    color:#677788 ;
}

.left-top-hire hr{
    width: 11rem;
    display: flex;
    margin: 1rem 0;
}

.left-bottom-person h2 {margin: 0;}

.left-bottom-person p {
    margin-top: 0;
    margin-bottom: 2.5rem;
    color: #5F6368;
}

.people-img-bar{
    display: flex; 
    gap: 1.63rem;
}

.people-img-bar img {
    border-radius: 2.25rem;
    width: 3.5rem;
    height: 3.5rem;
    clip-path: none;
   
}

.hire-right{flex: 1;}

.form{
    display: flex;
    flex-direction: column;
    border: 0.0625rem transparent;
    border-radius: 0.63rem;
    background-color: #f7f7f7;
    margin: 2rem;
    place-items: center;
    text-align: center;
    padding: 1.75rem;
    max-width: 38rem;
}

.form-head{
    font-size: 1.25rem;
}

.form-info{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1.25rem; 
    
}

.form-info h3{
    text-align: start;
    line-height: 1.75rem;
}

.input-row1, .input-row2, .input-row3 {
    display: flex;
    justify-content: center;
    gap: 1.25rem;
}

.input-row1 input, .input-row2 input, .input-row3 select {
    padding: 0.6rem;
    border-radius: 0.312rem;
    border: 0.0625rem solid #5F6368;
    flex: 1;
    font-size: 1.2rem;
}


.policy-links a{
    font-size: 1.25rem;
    color: #2576FF;
}

.policy-links a:nth-child(1){color: #666666;}

select, option {
    font-weight: 600;
    font-size: 1rem;
    width: 12rem;
}

.project-input{flex: 2}
/* ... */

